--- a/index.css
+++ b/index.css
@@ -10,10 +10,6 @@ body{
 .container{
    background-color: black;
 }
-
-
-
-
 .navbar{
   
    width:100%;
@@ -43,7 +39,7 @@ span{
   .navbar h2{
       font-size:45px;
       float: left;
-      color:black;
+      color:peachpuff;
       font-weight: bolder;
      
   }
@@ -54,16 +50,13 @@ span{
       margin-left: 0;
       background-size: cover;
       background-repeat: no-repeat;
-      background-position: top right;
-     
-     
-  }
+      background-position:center bottom;
+    }
  
   
 .clearfix{
     clear: both;
 }
-
 
 .content{
     width:100%;
@@ -72,17 +65,16 @@ span{
   
 }
 #content1{
-
-    padding-top: 60px;
+     padding-top: 60px;
     font-size: 50px;;
     text-transform: uppercase;
     font-weight: bolder;
-    color:black;
+    color:rgba(255, 255, 255,);
 
 }
 .para1, .para2, .para3{
     padding-top: 20px;
-    color:black;
+    color:white;
 }
 button{
     margin-top: 40px;
@@ -104,13 +96,15 @@ button{
     width:31%;
     color: gray;
     float:left;
+    margin-top: 30px;
    }
 
 h3{
 
-font-weight: lighter;
+font-weight: bold;
 font-size: 25px;
 color: white;
+
 }
 i{
 font-size: 70px;
@@ -140,6 +134,7 @@ font-size: 70px;
 #head1{
     font-size: 40px;
     color: white;
+    margin-top: 20px;;
 }
 #txt{
     font-size:16px;
@@ -160,6 +155,7 @@ font-size: 70px;
    #head2 {
        font-size: 35px;
        margin-left: 20px;;
+       margin-top:20px;
        
    }
 .p1,.p2{
@@ -173,6 +169,7 @@ padding: 18px;
   #head3 {
     font-size: 35px;
     margin-left: 20px;;
+    margin-top: 20px;
    
 }
 #p3{
@@ -191,14 +188,15 @@ padding: 18px;
     width:32%;
     margin:0;
     float: left;
+    padding-top:20px;
 }
 #subsec1{
-padding-top: 25px;
+padding-top: 20px;
 
 }
 #note{
     margin-left:159px;
-    margin-top:-46px;
+    margin-top:-56px;
     font-size:18px;
     color: white;
     padding-bottom: 50px;
@@ -216,6 +214,7 @@ padding-top: 25px;
     width:32%;
     float:left;
     margin-top:-8px;
+    padding-top: 50px;
 
 }
 .sec2{
@@ -229,6 +228,7 @@ padding-top: 25px;
 .section3{
     width:32%;
     float:left;
+    padding-top:50px;
 
 }
 .photo1{
